# dxc_compile_spirv

./: CMakeLists.txt  hlsl_to_spirv_dxc.cpp
3rd/include/dxc/Support/: Unicode.h
shaders/: RayQuery.compute  common.hlsl
